namespace/media/janitorr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janitorr
  namespace: media
spec:
  selector:
    app: janitorr
  ports:
    - port: 8978
      targetPort: 8978
      protocol: TCP
      name: janitorr-ui
  type: ClusterIP
