namespace/media/janitorr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: janitorr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`janitorr.oglesby.io`)
      kind: Rule
      services:
        - name: janitorr
          port: 8978
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: janitorr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`janitorr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: janitorr
          port: 8978
